--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,32 @@
   <version>1.0-SNAPSHOT</version>
   <name>archipelago_path_finder</name>
   <url>http://maven.apache.org</url>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>hu.ppke.itk.mi.App</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.googlecode.clichemaven</groupId>
+      <artifactId>cliche</artifactId>
+      <version>110413</version>
     </dependency>
   </dependencies>
 </project>
