--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>hu.ppke.itk.mi</groupId>
   <artifactId>archipelago_path_finder</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <name>archipelago_path_finder</name>
   <url>http://maven.apache.org</url>
   <build>
@@ -33,8 +33,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
     </plugins>
